# matrixNumericOperations

./: CMakeLists.txt  main.cpp  readMe.md
src/: Matrix.cpp  Matrix.h
tests/: MatrixBasisTest.cpp  MatrixBooleanTest.cpp  MatrixDimentionsTest.cpp  MatrixGetterSettersTest.cpp  MatrixOperationTests.cpp  MatrixQuestionTests.cpp  MatrixUtilitarianTests.cpp  MatrixValuesTest.cpp
